src/containers/hero/hero.css
.hero-container {
  display: block;
  width: 100%;
  height: 100%;
  position: absolute;
	/* background-image: url(./../../assets/images/desktop/hero-background.jpg);
  background-size: cover; */
  background-color: #ffda43;
}

.hero-container-padding {
  padding: 5rem;
  height: 70%;
  /* -webkit-transition: 0.75s cubic-bezier(0.52, 0.01, 0.16, 1) 0.5s;
  -moz-transition: 0.75s cubic-bezier(0.52, 0.01, 0.16, 1) 0.5s;
  transition: 0.75s cubic-bezier(0.52, 0.01, 0.16, 1) 0.5s;  */
}

.content.clearfix {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: flex-start;
  align-content: flex-start;
  flex-direction: column;
  flex-wrap: nowrap;
  justify-content: center;
}

h1 {
  margin: 0 0;
  font-size: 4vw;
  color: black;
}

.dynamic-words, .intro-text-end-point {
  font-weight: bold;
}

.intro-text-first-line, .intro-text-second-line, .intro-text-third-line {
  margin-top: -16px;
}

.intro-text-second-line, .intro-text-third-line, .intro-text-sub-title > * {
  font-weight: 400;
}

.intro-text-fourth-line {
  margin-top: 10px;
  margin-bottom: -5px;
}

.intro-text-contact-talk {
  margin-top: -5px;
}

h2 {
  font-size: 2vw;
  color: black;
}

h1, h2, a, span {
  -webkit-transition: 0.2s cubic-bezier(0.52, 0.01, 0.16, 1) 0.3s;
  -moz-transition: 0.2s cubic-bezier(0.52, 0.01, 0.16, 1) 0.3s;
  transition: 0.2s cubic-bezier(0.52, 0.01, 0.16, 1) 0.3s;
}

a {
  color: black;
  text-decoration: none;
}

/*.dynamic-words {
    text-shadow: 1px 1px 1px #ffd42d,
        1px 1px 1px #ffd42d,
        1px 1px 1px #ffd42d,
        1px 1px 1px #ffd42d,
        1px 1px 1px #ffd42d,
        1px 1px 1px #ffd42d,
        1px 1px 1px #ffd42d,
        1px 1px 1px #ffd42d,
        1px 1px 1px #ffd42d,
        1px 1px 1px #ffd42d,
    1px 1px 1px rgba(16,16,16,0.4),
    1px 1px 1px rgba(16,16,16,0.2),
    1px 1px 1px rgba(16,16,16,0.2),
    1px 1px 1px rgba(16,16,16,0.4);
}*/

.email-link {
  text-align: center;
}

.go-to-email-icon {
  width: 1.6vw;
  height: 1.6vw;
  margin-left: 0.5vw;
}

@media screen and (min-width: 2001px) {

  .hero-container-padding {
    padding: 5% 10% 5% 10%;
  }

  h1 {
    font-size: 3.1vw;
  }

  h2 {
    font-size: 1.4vw;
  }
    
}

@media screen and (max-width: 2000px) {

  .hero-container-padding {
    padding: 4.5%;
  }

  h1 {
    font-size: 3.3vw;
  }
    
}

@media screen and (max-width: 1500px) {

  .hero-container-padding {
    padding: 4.5%;
  }

  h1 {
    font-size: 45px;
  }

  h2 {
    font-size: 25px;
  }
    
}

@media screen and (max-width: 1100px) {

  .hero-container-padding {
    padding: 5%;
  }

  h1 {
    font-size: 4.5vw;
  }

  h2 {
    font-size: 2vw;
  }
    
}

@media screen and (max-width: 769px) {

  .hero-container-padding {
    padding: 6.5%;
  }

  h1 {
    font-size: 5vw;
  }

  h2 {
    font-size: 3vw;
  }

  .intro-text-first-line, .intro-text-second-line, .intro-text-third-line {
    line-height: 110%;
    margin-top: 0;
  }

  .go-to-email-icon {
    width: 3vw;
    height: 3vw;
  }
}

@media screen and (max-width: 600px) {

  h1 {
    font-size: 6vw;
  }

  h2 {
    font-size: 3.5vw;
  }

  .hero-container-padding {
    padding: 6.5%;
    height: 80%;
  }

  .intro-text-fourth-line {
    margin-bottom: 2%;
    line-height: 110%;
  }

  .go-to-email-icon {
    width: 20px;
    height: 20px;
  }
}

@media screen and (max-width: 478px) {

  h1 {
    font-size: 6.5vw;
  }

  h2 {
    font-size: 4vw;
  }

  /* .intro-text-first-line, .intro-text-second-line, .intro-text-third-line {
    line-height: 30px;
    margin-top: 0;
  } */

  .intro-text-fourth-line {
    margin-top: 25px;
  }

  .email-link {
    width: 20px;
    height: 20px;
    z-index: 0;
    top: 0.5vw;
    left: 0.5vw;
  }
    
  .go-to-email-icon {
    z-index: 0;
    height: 4vw;
  }
}

